--- a/src/CiteMe.Web/Views/Shared/_Layout.cshtml
+++ b/src/CiteMe.Web/Views/Shared/_Layout.cshtml
@@ -3,27 +3,24 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CiteMe.Web</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CiteMe.Web.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="bg-success">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CiteMe.Web</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h2>CiteMe</h2></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 d-grid gap-2 d-md-flex justify-content-md-end">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light btn btn-success fw-bold" asp-area="" asp-controller="Home" asp-action="Index">Registro</a>
                         </li>
                     </ul>
                 </div>
@@ -36,9 +33,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted bg-light">
         <div class="container">
-            <p class="text-center">&copy; 2024 - CiteMe.Web</p>
+            <p class="text-center"><span class="fw-bold text-black fs-4">CiteMe</span> - ALL CREDIT RESERVET &copy; 2024</p>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
