--- a/src/CiteMe.Web/Views/Home/Index.cshtml
+++ b/src/CiteMe.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model CiteMe.Domain.Cites
+@{
     ViewData["Title"] = "CiteMe-Form";
 }
 
@@ -7,22 +8,22 @@
     <p class="text-light">AGENDANDO SU TURNO</p>
 </div>
 
-<form class="form-control ">
+<form class="form-control" asp-action="Index">
     <div class="mb-3">
-        <label for="name" class="form-label fw-bold">Nombre:</label>
-        <input type="text" class="form-control" id="name" placeholder="Ingrese su nombre">
+        <label asp-for="name" class="form-label fw-bold">Nombre:</label>
+        <input type="text" class="form-control" asp-for="name" placeholder="Ingrese su nombre">
     </div>
     <div class="mb-3">
-        <label for="phone" class="form-label fw-bold">Telefono:</label>
-        <input type="number" class="form-control" id="phone" placeholder="Ingrese su numero telefeno">
+        <label asp-for="telephone" class="form-label fw-bold">Telefono:</label>
+        <input type="number" class="form-control" asp-for="telephone" placeholder="Ingrese su numero telefeno">
     </div>
     <div class="mb-3">
-        <label for="date" class="form-label fw-bold">Fecha:</label>
-        <input type="date" class="form-control" id="date">
+        <label asp-for="date" class="form-label fw-bold">Fecha:</label>
+        <input type="date" class="form-control" asp-for="date">
     </div>
     <div class="mb-3">
-        <label for="time" class="form-label fw-bold">Hora:</label>
-        <input type="time" class="form-control" id="time">
+        <label asp-for="time" class="form-label fw-bold">Hora:</label>
+        <input type="time" class="form-control" asp-for="time">
     </div>
     <div class="d-grid gap-2 col-6 mx-auto">
         <input class="btn btn-success fw-bold mx-auto" type="submit" value="AGENDAR" />
