--- a/src/CiteMe.Web/Views/Cites/Index.cshtml
+++ b/src/CiteMe.Web/Views/Cites/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CiteMe.Domain.Cites>
+﻿@model IEnumerable<CitesModel>
 
 @{
     ViewData["Title"] = "CiteMe-List";
@@ -23,9 +23,9 @@
                 <td>
                     <div class="btn-group w-50" role="group" aria-label="Basic mixed styles example">
                         <a class="btn btn-primary" asp-controller="Cites" asp-action="View" asp-route-id="@cite.id">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
-                                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
-                                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar-plus" viewBox="0 0 16 16">
+                                <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7" />
+                                <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z" />
                             </svg>
                         </a>
                         <a class="btn btn-danger" asp-controller="Cites" asp-action="Delete" asp-route-id="@cite.id">
