--- a/src/CiteMe.Web/Views/_ViewImports.cshtml
+++ b/src/CiteMe.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using CiteMe.Web
 @using CiteMe.Web.Models
+@using CiteMe.Domain
+@using CiteMe.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
